--- a/jop.html
+++ b/jop.html
@@ -30,9 +30,9 @@
             </div>                
 <div id="feed">
     <div id="feed-main">Места в команде Kasya для вас!</div>
-    <div id="feed-main"><h2>Beta-Tester продуктов Kasya</h2><p>Если вы готовы посвящать каждую свободную минутку на тестирование продуктов Kasya, то это ваше место!</p>От вас требуется:<ul><li>Свободное время, на котором вы сможете заняться тестировнем продуктов</li><li>Оборудование для тестирования продуктов</li></ul><button>Команда тестирования</button></div>
-    <div id="feed-main"><h2>Оператор в Команду поддержки</h2><p>Вы обладаете даром красноречия? Вы готовы принять ряды тех самых ребят, что смогут просвещать людей!</p>От вас требуется:<ul><li>Умение правильно излагать мысли</li><li>Иметь "чистую речь"</li><li>Иметь доступ к сервисам Kasya не более, чем на 60 минут.</li></ul><button>Команда Поддежки</button></div>
-    <div id="feed-main"><h2>Дизайнер</h2><p>Вы готовы делать необычные наброски для наших проектов? Тогда мы готовы видеть вас в роли дизайнера наших продуктов!</p>От вас требуется:<ul><li>Иметь начальное понимание дизайна</li><li>Иметь опыт работы над дизайном</li><li>Представить портфолио с вашими работами</li></ul><button>Администрация KTeam</button></div>
+    <div id="feed-main"><h2>Beta-Tester продуктов Kasya</h2><p>Если вы готовы посвящать каждую свободную минутку на тестирование продуктов Kasya, то это ваше место!</p>От вас требуется:<ul><li>Свободное время, на котором вы сможете заняться тестировнем продуктов</li><li>Оборудование для тестирования продуктов</li></ul><button onclick="jopp()">Команда тестирования</button></div>
+    <div id="feed-main"><h2>Оператор в Команду поддержки</h2><p>Вы обладаете даром красноречия? Вы готовы принять ряды тех самых ребят, что смогут просвещать людей!</p>От вас требуется:<ul><li>Умение правильно излагать мысли</li><li>Иметь "чистую речь"</li><li>Иметь доступ к сервисам Kasya не более, чем на 60 минут.</li></ul><button onclick="jopp()">Команда Поддежки</button></div>
+    <div id="feed-main"><h2>Дизайнер</h2><p>Вы готовы делать необычные наброски для наших проектов? Тогда мы готовы видеть вас в роли дизайнера наших продуктов!</p>От вас требуется:<ul><li>Иметь начальное понимание дизайна</li><li>Иметь опыт работы над дизайном</li><li>Представить портфолио с вашими работами</li></ul><button onclick="jopp()">Администрация KTeam</button></div>
 
         </main>
         <footer>
@@ -44,6 +44,11 @@ KTeam | Kasya Team 2021
 
 
         <script src="assets/code.js"></script>
+<script>
+function jopp(){
+window.location.href = 'https://yandex.ru/business/widget/request/company/2390708540'
+}
+</script>
             <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
