--- a/cc.html
+++ b/cc.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="assets//css/uicons-regular-rounded.css">
         <script type="text/javascript" src="assets/html2canvas.js"></script>
         <script type="text/javascript" src="assets/FileSaver.js"></script>
+<script
+    async="async"
+    src="https://cdn-rtb.sape.ru/rtb-b/js/283/2/128283.js"
+    type="text/javascript">
+</script>
     </head>
 
     <body onload="b_load()">
@@ -28,7 +33,7 @@
                     <a id="p_pan" href="./jop">Вакансии</a>
                     <a id="p_pan"  href="./support">Поддержка</a>
                   </div>     
-                  
+                  <div id="SRTB_694713"></div>
             </div>                 
 <div id="feed">
        <div id="feed-main">    
